--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "gulp": "~3.8.6",
     "jshint-stylish": "~0.4.0",
     "gulp-jshint": "~1.8.2",
-    "phantomjs": "~1.9.7-15",
-    "mocha-phantomjs": "~3.5.0"
+    "mocha-phantomjs": "~3.5.0",
+    "pageres": "~0.3.0"
   }
 }
