--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jshint-stylish": "~0.4.0",
     "gulp-jshint": "~1.8.2",
     "mocha-phantomjs": "~3.5.0",
-    "pageres": "~0.3.0"
+    "pageres": "~0.3.0",
+    "phantomjs": "~1.9.7-15"
   }
 }
