--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,8 @@
   "devDependencies": {
     "mocha": "~1.21.3",
     "should": "~3.3.1"
+  },
+  "dependencies": {
+    "jquery": "~2.1.1"
   }
 }
